Expand and organize relay configs, plus minor improvements
